Bump commons-fileupload version from 1.4 to 1.5
Fix a DoS vulnerability described in https://security.snyk.io/vuln/SNYK-JAVA-COMMONSFILEUPLOAD-3326457 and small refactoring.