@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2018-2022 Thomas Akehurst
+ * Copyright (C) 2018-2023 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 package com.github.tomakehurst.wiremock.jetty11;
 
 import static com.github.tomakehurst.wiremock.common.Exceptions.throwUnchecked;
-import static com.google.common.collect.FluentIterable.from;
 
 import com.github.tomakehurst.wiremock.http.Request;
 import com.github.tomakehurst.wiremock.servlet.WireMockHttpServletMultipartAdapter;
@@ -24,6 +23,7 @@ import com.google.common.base.Function;
 import jakarta.servlet.http.Part;
 import java.io.ByteArrayInputStream;
 import java.util.Collection;
+import java.util.stream.Collectors;
 import org.eclipse.jetty.server.MultiPartInputStreamParser;
 
 public class MultipartParser {
@@ -33,15 +33,9 @@ public class MultipartParser {
     MultiPartInputStreamParser parser =
         new MultiPartInputStreamParser(new ByteArrayInputStream(body), contentType, null, null);
     try {
-      return from(parser.getParts())
-          .transform(
-              new Function<Part, Request.Part>() {
-                @Override
-                public Request.Part apply(Part input) {
-                  return WireMockHttpServletMultipartAdapter.from(input);
-                }
-              })
-          .toList();
+      return parser.getParts().stream()
+          .map((Function<Part, Request.Part>) WireMockHttpServletMultipartAdapter::from)
+          .collect(Collectors.toList());
     } catch (Exception e) {
       return throwUnchecked(e, Collection.class);
     }
